Fold compositing display items into contained drawings if the drawing is a singleton.

BUG=628831

Review-Url: https://codereview.chromium.org/2186643002
Cr-Commit-Position: refs/heads/master@{#408725}

Former-commit-id: 09f3b178cfb677eaaf91a282df0d898a041378cd